# IAQDashboard

./: .gitignore  README.md
.github/workflows/: build.yml
sensor-api/: Cargo.toml  README.md  go.mod  go.sum  main.go  main.rs
sensor-dashboard/: dataToDB.php  package.json  svelte.config.js  vite.config.ts
sensor-dashboard/src/lib/: config.ts
sensor-dashboard/src/lib/Components/: LineChart.svelte
sensor-dashboard/src/lib/models/: index.ts
sensor-dashboard/src/routes/: +page.svelte
